Fixed button layout

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -43,8 +43,14 @@
     </template>
 
     <template id="vx-content">
+      <style>
+        .vx-content {
+          display: flex;
+          justify-content: flex-end;
+        }
+      </style>
       <div>
-        <div class="vexil-flex-align-right">
+        <div class="vx-content">
           <button id="add-flag-btn" class="ui primary button">
             Add Flag
           </button>
