--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vexil</title>
     <script defer src="./index.tsx"></script>
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
