Updated name to "unveil"

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vexil</title>
+    <title>Unveil</title>
     <script defer src="./index.tsx"></script>
     <link rel="shortcut icon" href="#" />
   </head>
